2254 [Update] fixed a crash if the proxy has been enabled without server address
2253 [Queue] warn if intermediate files of an incomplete job are going to be deleted
2252 [Worker] if a job is aborted the corresponding worker will be stopped
2251 [OneClick] pgcdemux will only be used if more than one PGC is found
2250 [AVS Script Creator] avoid upsizing when resizing a cropped source
     [AVS Script Creator] added option to enable upsizing in the profile (disabled by default)
     [AVS Script Creator] added option to select the default mod value in the profile (mod16 by default)
     [AVS Script Creator] adjusted "Clever (TM) anamorphic encoding" so the new mod values are used
     [OneClick] obey the new AVS Script Creator settings
2249 [HD Streams Extractor] fixed handling of seamless branching EVO files
2248 [OneClick] warn if identical tracks are about to be processed
2247 [AVS Script Creator] hide "Aspect Ratio Error" when doing an anamorphic encoding
                          fixed handling of the "Aspect Ratio Error" if dealing with an anamorphic input file
2246 [AVS Script Creator] enhanced readability of the "red parts"
                          the "Aspect Ratio Error" only turns red if the value is bigger than the acceptable aspect error
                          crop values will be used also for the upsize warnings
2245 [Queue] related jobs are highlighted when selecting a job
2244 [Queue] when deleting a job warn always if it is part of a related job series
2243 [AVS Script Creator] fixed a crash if "Clever (TM) anamorphic encoding" is enabled
2242 [AVS Script Creator] show signed "Aspect Ratio Error"
2241 [Worker] a finished temporary worker will not start anymore idle workers. Bug #691
              several small optimizations
2240 [AVS Script Creator] "Aspect Ratio Error" will also be changed if cropping is changed
2239 [AVS Script Creator] added "Aspect Ratio Error"
2238 [AVS Script Creator] enabled upsizing

Changelog 2153 --> 2237
