@@ -30,6 +30,7 @@ namespace MeGUI.core.gui
         {
             this.tabControl1 = new System.Windows.Forms.TabControl();
             this.templatePage = new System.Windows.Forms.TabPage();
+            this.dllBar = new MeGUI.FileBar();
             this.flowLayoutPanel1 = new System.Windows.Forms.FlowLayoutPanel();
             this.insertInput = new System.Windows.Forms.Button();
             this.insertDeinterlace = new System.Windows.Forms.Button();
@@ -55,7 +56,6 @@ namespace MeGUI.core.gui
             this.resize = new System.Windows.Forms.CheckBox();
             this.noiseFilter = new System.Windows.Forms.CheckBox();
             this.resizeFilterType = new System.Windows.Forms.ComboBox();
-            this.dllBar = new MeGUI.FileBar();
             this.tabControl1.SuspendLayout();
             this.templatePage.SuspendLayout();
             this.flowLayoutPanel1.SuspendLayout();
@@ -88,6 +88,23 @@ namespace MeGUI.core.gui
             this.templatePage.Size = new System.Drawing.Size(412, 379);
             this.templatePage.TabIndex = 0;
             this.templatePage.Text = "Template";
+            // 
+            // dllBar
+            // 
+            this.dllBar.Anchor = ((System.Windows.Forms.AnchorStyles)(((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Left) 
+            | System.Windows.Forms.AnchorStyles.Right)));
+            this.dllBar.Filename = "";
+            this.dllBar.Filter = "DLL Files (*.dll)|*.dll";
+            this.dllBar.FilterIndex = 0;
+            this.dllBar.FolderMode = false;
+            this.dllBar.Location = new System.Drawing.Point(63, 350);
+            this.dllBar.Name = "dllBar";
+            this.dllBar.ReadOnly = true;
+            this.dllBar.SaveMode = false;
+            this.dllBar.Size = new System.Drawing.Size(328, 26);
+            this.dllBar.TabIndex = 46;
+            this.dllBar.Title = "Select AviSynth Plugin DLL to open";
+            this.dllBar.FileSelected += new MeGUI.FileBarEventHandler(this.dllBar_FileSelected);
             // 
             // flowLayoutPanel1
             // 
@@ -278,7 +295,7 @@ namespace MeGUI.core.gui
             this.groupBox1.Controls.Add(this.dss2);
             this.groupBox1.Location = new System.Drawing.Point(3, 98);
             this.groupBox1.Name = "groupBox1";
-            this.groupBox1.Size = new System.Drawing.Size(219, 79);
+            this.groupBox1.Size = new System.Drawing.Size(213, 79);
             this.groupBox1.TabIndex = 23;
             this.groupBox1.TabStop = false;
             this.groupBox1.Text = " Misc ";
@@ -369,29 +386,13 @@ namespace MeGUI.core.gui
             // resizeFilterType
             // 
             this.resizeFilterType.DropDownStyle = System.Windows.Forms.ComboBoxStyle.DropDownList;
+            this.resizeFilterType.Enabled = false;
             this.resizeFilterType.Font = new System.Drawing.Font("Tahoma", 8.25F, System.Drawing.FontStyle.Regular, System.Drawing.GraphicsUnit.Point, ((byte)(0)));
             this.resizeFilterType.ItemHeight = 13;
             this.resizeFilterType.Location = new System.Drawing.Point(96, 22);
             this.resizeFilterType.Name = "resizeFilterType";
             this.resizeFilterType.Size = new System.Drawing.Size(121, 21);
             this.resizeFilterType.TabIndex = 1;
-            // 
-            // dllBar
-            // 
-            this.dllBar.Anchor = ((System.Windows.Forms.AnchorStyles)(((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Left) 
-            | System.Windows.Forms.AnchorStyles.Right)));
-            this.dllBar.Filename = "";
-            this.dllBar.Filter = "DLL Files (*.dll)|*.dll";
-            this.dllBar.FilterIndex = 0;
-            this.dllBar.FolderMode = false;
-            this.dllBar.Location = new System.Drawing.Point(63, 350);
-            this.dllBar.Name = "dllBar";
-            this.dllBar.ReadOnly = true;
-            this.dllBar.SaveMode = false;
-            this.dllBar.Size = new System.Drawing.Size(328, 26);
-            this.dllBar.TabIndex = 46;
-            this.dllBar.Title = "Select AviSynth Plugin DLL to open";
-            this.dllBar.FileSelected += new MeGUI.FileBarEventHandler(this.dllBar_FileSelected);
             // 
             // AviSynthProfileConfigPanel
             // 
