@@ -49,7 +49,7 @@ namespace MeGUI
             this.DenoiseMethod = 0; // UnDot
             this.Deinterlace = false;
             this.Denoise = false;
-            this.Resize = false;
+            this.Resize = true;
             this.IVTC = false;
             this.MPEG2Deblock = false;
             this.ColourCorrect = true;
