@@ -1,3 +1,8 @@
+2255 [AVS Script Creator] resize is enabled by default in the profiles (only for new profiles)
+     [AVS Script Creator] suggest resolution is automatically pre-selected when doing a resize
+     [AVS Script Creator] DAR changes also triggers a recalc of the "Aspect Ratio Error"
+     [AVS Script Creator] avoid upsizing (if disallowed) when "Clever (TM) anamorphic encoding" is used
+     [AVS Script Creator] some minor cosmetics / changes
 2254 [Update] fixed a crash if the proxy has been enabled without server address
 2253 [Queue] warn if intermediate files of an incomplete job are going to be deleted
 2252 [Worker] if a job is aborted the corresponding worker will be stopped
